--- a/index.html
+++ b/index.html
@@ -32,13 +32,43 @@
                         <ul class="menu">
 
                             <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
+                            <li><a href="">Products</a>
+
+                                <ul class="submenu">
+                                    <li><a href="">Lorem ipsum dolor</a></li>
+                                    <li><a href="">Sit amet</a></li>
+                                    <li><a href="">Consectetur adipisicing</a></li>
+                                    <li><a href="">Tempor incididunt</a></li>
+                                    <li><a href="">Dolore magna aliqua</a></li>
+                                    <li><a href="">Ut enim ad minim veniam </a></li>
+                                    <li><a href="">Quis nostrud</a></li>
+
+                                </ul>
+
+
+                            </li>
                             <li><a href="">Payment</a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-3">search</div>
+                <div class="col-3">
+                    <div class="search-box">
+                        <div>
+                            <input type="search" placeholder="search" class="text">
+                        </div>
+                        <div class="lupa">
+                            <img src="images/search.png" alt="">
+                        </div>
+
+                    </div>
+                    <div class="korz">
+                        <button>
+                            <img src="/lesson-9/shop-project/images/korzbl.png" alt="">
+                        </button>
+                    </div>
+
+                </div>
             </div>
         </div>
     </header>
