--- a/index.html
+++ b/index.html
@@ -53,19 +53,22 @@
                     </nav>
                 </div>
                 <div class="col-3">
-                    <div class="search-box">
-                        <div>
-                            <input type="search" placeholder="search" class="text">
+                    <div class="row">
+                        <div class="col-9">
+                            <form class="search">
+                                <input type="search" placeholder="search" class="searchfield">
+                                <button class="buttonsearch"></button>
+
+                            </form>
+
                         </div>
-                        <div class="lupa">
-                            <img src="images/search.png" alt="">
+                        <div class="col-3">
+                            <div class="cart">
+                                <div class="korz"></div>
+                                <div class="product-count">4</div>
+                            </div>
                         </div>
 
-                    </div>
-                    <div class="korz">
-                        <button>
-                            <img src="/lesson-9/shop-project/images/korzbl.png" alt="">
-                        </button>
                     </div>
 
                 </div>
