--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
                             <li><a href="">Home</a></li>
                             <li><a href="">Products</a>
+                                <div class="arrowdown"></div>
 
                                 <ul class="submenu">
                                     <li><a href="">Lorem ipsum dolor</a></li>
