--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <nav>
                         <ul class="menu">
 
-                            <li><a href="">Home</a></li>
+                            <li><a href="">Home 1</a></li>
                             <li><a href="">Products</a>
                                 <div class="arrowdown"></div>
 
