--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <ul class="menu">
 
                             <li><a href="">Home 1</a></li>
-                            <li><a href="">Products</a>
+                            <li><a href="">Products 2</a>
                                 <div class="arrowdown"></div>
 
                                 <ul class="submenu">
