--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                             </li>
                             <li><a href="">Payment</a></li>
-                            <li><a href="">Shipping</a></li>
+                            <li><a href="">Shipping 4</a></li>
                         </ul>
                     </nav>
                 </div>
