--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <nav>
                         <ul class="menu">
 
-                            <li><a href="">Home 1</a></li>
-                            <li><a href="">Products 2</a>
+                            <li><a href="">Home </a></li>
+                            <li><a href="">Products </a>
                                 <div class="arrowdown"></div>
 
                                 <ul class="submenu">
@@ -48,8 +48,8 @@
 
 
                             </li>
-                            <li><a href="">Payment 3</a></li>
-                            <li><a href="">Shipping 4</a></li>
+                            <li><a href="">Payment </a></li>
+                            <li><a href="">Shipping </a></li>
                         </ul>
                     </nav>
                 </div>
