add image, add main structure

--- a/index.html
+++ b/index.html
@@ -77,9 +77,124 @@
         </div>
     </header>
 
-    <main class="main">main</main>
+    <main class="main">
+        <div class="container-2">
+            <div class="col-3">
+                <div class="filter">
+                    Фільтр
+                </div>
+            </div>
+
+            <div class="col-9">
+                <div class="big-box">
+                    <ul class="breadcrumb">
+                        <li> <a href="#">Home page ></a></li>
+                        <li> <a href="#">Products ></a></li>
+                        <li> <a href="#">Laptops and Tablets</a></li>
+
+                    </ul>
+                    <h2>Laptop and Tablets</h2>
+                    <div class="product-box">
+
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#1 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#2 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#3 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#1 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#2 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#3 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#1 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#2 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+                        <div class="product-card">
+                            <div class="boximage">картинка</div>
+                            <div class="name">#3 Device Name</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit..</p>
+                            <div class="info">info</div>
+                            <div class="price">price</div>
+                            <div class="more">more</div>
+                            <div class="add">add</div>
+                        </div>
+
+                    </div>
+                    <div>Load more</div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+
+
+    </main>
 
     <footer class="footer">footer</footer>
+
 
 </body>
 
