add card images

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
                     <div class="product-box">
 
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                                 <img class="image" src="images/imac.png" alt="">
+                                 <button class="fullscreen"></button>
+                                 <button class="heart"></button>
+                                </div>
                             <div class="name">#1 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <div class="info">info</div>
@@ -106,7 +110,11 @@
                             <div class="add">add</div>
                         </div>
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                               <img class="image" src="images/tvbox.png" alt=""> 
+                               <button class="fullscreen"></button>
+                                 <button class="heart blue"></button>
+                            </div>
                             <div class="name">#2 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <div class="info">info</div>
@@ -115,7 +123,11 @@
                             <div class="add">add</div>
                         </div>
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                                <img class="image" src="images/watch.png" alt="">
+                                <button class="fullscreen"></button>
+                                <button class="heart"></button>
+                            </div>
                             <div class="name">#3 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <div class="info">info</div>
@@ -124,7 +136,11 @@
                             <div class="add">add</div>
                         </div>
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                                <img class="image" src="images/laptop.png" alt="">
+                                <button class="fullscreen"></button>
+                                 <button class="heart"></button>
+                            </div>
                             <div class="name">#1 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <div class="info">info</div>
@@ -133,7 +149,11 @@
                             <div class="add">add</div>
                         </div>
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                                <img class="image" src="images/ipode.png" alt="">
+                                <button class="fullscreen"></button>
+                                 <button class="heart"></button>
+                            </div>
                             <div class="name">#2 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <div class="info">info</div>
@@ -142,7 +162,11 @@
                             <div class="add">add</div>
                         </div>
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                                <img class="image" src="images/phone.png" alt="">
+                                <button class="fullscreen"></button>
+                                 <button class="heart"></button>
+                            </div>
                             <div class="name">#3 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <div class="info">info</div>
@@ -151,7 +175,11 @@
                             <div class="add">add</div>
                         </div>
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                                <img class="image" src="images/tablet.png" alt="">
+                                <button class="fullscreen"></button>
+                                 <button class="heart"></button>
+                            </div>
                             <div class="name">#1 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <div class="info">info</div>
@@ -160,7 +188,11 @@
                             <div class="add">add</div>
                         </div>
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                                <img class="image" src="images/tvbox2.png" alt="">
+                                <button class="fullscreen"></button>
+                                 <button class="heart"></button>
+                            </div>
                             <div class="name">#2 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <div class="info">info</div>
@@ -169,7 +201,11 @@
                             <div class="add">add</div>
                         </div>
                         <div class="product-card">
-                            <div class="boximage">картинка</div>
+                            <div class="boximage">
+                                <img class="image" src="images/watch2.png" alt="">
+                                <button class="fullscreen"></button>
+                                 <button class="heart"></button>
+                            </div>
                             <div class="name">#3 Device Name</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit..</p>
                             <div class="info">info</div>
