--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="col-3">
                             <div class="cart">
                                 <div class="korz"></div>
-                                <div class="product-count">4</div>
+                                <div class="product-count" id="products-count">0</div>
                             </div>
                         </div>
                     </div>
@@ -338,7 +338,7 @@
 
     <footer class="footer">footer</footer>
 
-
+<script src="app.js"></script>
 </body>
 
 </html>
