--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Shop-project</title>
 
     <link rel="stylesheet" href="reset.css">
+
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,6 +72,22 @@
         </div>
     </header>
     <main class="main">
+        <div class="slider-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 ">
+                        <div class="slider">
+                            <div>Slide 1</div>
+                            <div>Slide 2</div>
+                            <div>Slide 3</div>
+                            <div>Slide 4</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
         <div class="container">
             <div class="row">
                 <div class="col-3">
@@ -130,7 +150,7 @@
                                 <div class="boximage">
                                     <img class="image" src="images/imac.png" alt="">
                                     <button class="fullscreen"></button>
-                                    <button class="heart liked"></button>
+                                    <button class="heart"></button>
                                 </div>
                                 <div class="product-body">
                                     <div class="name">#1 Device Name</div>
@@ -349,13 +369,18 @@
                 <div class="form-field">
                     <input type="text" placeholder="Your phone">
                 </div>
-                <button>Please call</button>
+                <button class="modal-btn">Please call</button>
 
             </form>
         </div>
     </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
 
     <script src="app.js"></script>
+
+
 </body>
 
 </html>
