add counter for all cards

--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
                                         <p><span>RAM:</span>1 GB</p>
                                     </div>
                                     <div class="price">$1250 <sup>99</sup></div>
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
                                     <button class="button-big more">MORE DETAILS</button>
                                     <button class="button-big add">ADD TO CART</button>
                                 </div>
@@ -212,6 +217,11 @@
                                         <p><span>RAM:</span>1 GB</p>
                                     </div>
                                     <div class="price">$399 <sup>50</sup></div>
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
                                     <button class="button-big more">MORE DETAILS</button>
                                     <button class="button-big add">ADD TO CART</button>
                                 </div>
@@ -233,6 +243,11 @@
                                         <p><span>RAM:</span>1 GB</p>
                                     </div>
                                     <div class="price">$599 <sup>25</sup></div>
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
                                     <button class="button-big more">MORE DETAILS</button>
                                     <button class="button-big add">ADD TO CART</button>
                                 </div>
@@ -254,6 +269,11 @@
                                         <p><span>RAM:</span>1 GB</p>
                                     </div>
                                     <div class="price">$1250 <sup>99</sup></div>
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
                                     <button class="button-big more">MORE DETAILS</button>
                                     <button class="button-big add">ADD TO CART</button>
                                 </div>
@@ -275,6 +295,11 @@
                                         <p><span>RAM:</span>1 GB</p>
                                     </div>
                                     <div class="price">$399 <sup>50</sup></div>
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
                                     <button class="button-big more">MORE DETAILS</button>
                                     <button class="button-big add">ADD TO CART</button>
                                 </div>
@@ -296,6 +321,11 @@
                                         <p><span>RAM:</span>1 GB</p>
                                     </div>
                                     <div class="price">$599 <sup>25</sup></div>
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
                                     <button class="button-big more">MORE DETAILS</button>
                                     <button class="button-big add">ADD TO CART</button>
                                 </div>
@@ -317,6 +347,11 @@
                                         <p><span>RAM:</span>1 GB</p>
                                     </div>
                                     <div class="price">$1250 <sup>99</sup></div>
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
                                     <button class="button-big more">MORE DETAILS</button>
                                     <button class="button-big add">ADD TO CART</button>
                                 </div>
@@ -338,6 +373,11 @@
                                         <p><span>RAM:</span>1 GB</p>
                                     </div>
                                     <div class="price">$399 <sup>50</sup></div>
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
                                     <button class="button-big more">MORE DETAILS</button>
                                     <button class="button-big add">ADD TO CART</button>
                                 </div>
